MOBI-1042 Accordion Panel not rendering all content when page is large (requires scrolling) - set pagePanel body to absolute position to avoid strange webkit bug (content hidden with combination of web-overflow-scrolling: touch; and overflow: auto;)
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@40377 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/resources/themes/base/1_page_panel.css
+++ b/resources/themes/base/1_page_panel.css
@@ -67,7 +67,7 @@
 /* layout for buttons in headers and footers */
 .mobi-pagePanel-body {
     padding: 0;
-    position: static;
+    position: absolute;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     width: 100%;
